--- a/src/client/home/components/hero/Hero.css
+++ b/src/client/home/components/hero/Hero.css
@@ -9,15 +9,14 @@
     height: 70vh;
 }
 
-.hero-button{
-    width: 100%;
-    height: 100%;
-    color: white;
+.hero .owl-nav{
+    position: absolute;
+    width: 95%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    top: 10px;
-    z-index: 99;
-    font-size: 30px;
+    z-index: 9;
+    top: 250px;
+    left: 30px;
+    color: white;
+    font-size: 40px;
 }
