--- a/src/client/invitation_1/Invitation1.css
+++ b/src/client/invitation_1/Invitation1.css
@@ -1,17 +1,34 @@
 .invitation1{
-    width: 85%;
+    width: 100%;
+    overflow: hidden;
     height: auto;
     margin: 0 auto;
+    background-color: #313131;
+    color: #FFB740;
+}
+
+h1{
+    margin: 0;
 }
 
 .title{
     text-align: center;
+    font-family: 'Ephesis', cursive;
+    font-size: 40px;
+    margin-top: -15px;
+    margin-bottom: 20px;
+}
+
+.invitation1 p {
+    margin: 0;
 }
 
 .cover {
-    width: 100%;
-    margin: 40px auto;
+    width: 90%;
+    margin: 0 auto;
     text-align: center;
+    padding: 40px 0;
+    display: none;
 }
 
 .cover .upacara{
@@ -37,33 +54,51 @@
     font-size: 35px;
 }
 
-.nama{
-    width: 100%;
-    margin: 40px auto;
+.pembukaan{
+    width: 80%;
+    padding-top: 60px;
+    margin: 0 auto;
+    text-align: center;
 }
 
-.nama p{
-    text-align: justify;
+.pembukaan-image{
+    width: 300px;
+    margin: 0 auto;
+}
+
+.pembukaan img{
+    object-fit: cover;
+    overflow: hidden;
+    width: 100%;
+    height: 100px;
+    margin-left: 5px;
+}
+
+.pembukaan h1{
+    margin-bottom: 20px;
+}
+
+.pembukaan p {
+    text-align: center;
+}
+
+.nama{
+    width: 80%;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.nama img{
+    object-fit: cover;
+    overflow: hidden;
+    width: 180px;
+    height: 50px;
 }
 
 .nama h2{
     font-size: 20px;
     text-align: center;
     margin: 10px 0;
-}
-
-.detail-event{
-    width: 100%;
-    height: auto;
-    text-align: center;
-}
-
-.detail-event button{
-    width: 200px;
-    height: 40px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 22px;
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
 }
