--- a/src/client/invitation_1/Invitation1.css
+++ b/src/client/invitation_1/Invitation1.css
@@ -24,20 +24,74 @@ h1{
 }
 
 .cover {
-    width: 90%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     margin: 0 auto;
     text-align: center;
     padding: 40px 0;
-    display: none;
+    background-color: #313131;
+    z-index: 10;
+    transform: translateY(0);
+    transition: all 1s ease;
+}
+
+.cover.active{
+    transform: translateY(-2000px);
+    transition: all 1s ease;
+}
+
+.cover-frame{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.left-top{
+    position: absolute;
+    left: -100px;
+    top: -56px;
+}
+
+.left-bottom{
+    position: absolute;
+    left: -87px;
+    bottom: 63px;
+    transform: rotate(270deg);
+}
+
+.right-top{
+    position: absolute;
+    right: -90px;
+    top: -73px;
+    transform: rotate(90deg);
+}
+
+.right-bottom{
+    position: absolute;
+    right: -100px;
+    bottom: 76px;
+    transform: rotate(180deg);
+}
+
+.cover-body {
+    position: absolute;
+    top: 183px;
+    left: 20px;
+    right: 20px;
 }
 
 .cover .upacara{
-    font-size: 18px;
-    margin-top: 30px;
+    font-family: 'Ephesis', cursive;
+    font-size: 35px;
+    margin-top: 35px;
 }
 
 .cover h1{
-    margin-top: 50px;
+    font-family: 'Ephesis', cursive;
+    font-size: 50px;
 }
 
 .cover h2{
@@ -46,12 +100,31 @@ h1{
 
 .cover .dates{
     margin-top: 50px;
+    margin-bottom: 20px;
     font-size: 20px;
 }
 
 .cover h3{
-    margin: 0;
+    margin-top: 10px;
     font-size: 35px;
+}
+
+.cover .button {
+    display: block;
+    height: 391px;
+    width: 391px;
+    border-radius: 50%;
+    border: none;
+    background-color: #444444;
+    position: absolute;
+    left: -9px;
+    top: 625px;
+    padding-top: 30px ;
+    font-size: 20px;
+}
+
+.cover i {
+    font-size: 40px;
 }
 
 .pembukaan{
@@ -84,7 +157,7 @@ h1{
 
 .nama{
     width: 80%;
-    margin: 50px auto;
+    margin: 60px auto;
     text-align: center;
 }
 
