--- a/src/client/invitation_1/protokol/Protokol.css
+++ b/src/client/invitation_1/protokol/Protokol.css
@@ -2,7 +2,7 @@
     width: 80%;
     height: auto;
     text-align: center;
-    margin: 60px auto;
+    margin: 100px auto 50px auto;
 }
 
 .protokol img{
