--- a/src/client/invitation_1/detail-event/DetailEvent.css
+++ b/src/client/invitation_1/detail-event/DetailEvent.css
@@ -2,7 +2,7 @@
     width: 80%;
     height: auto;
     text-align: center;
-    margin: 100px auto;
+    margin: 200px auto;
 }
 
 .detail-event img{
@@ -50,4 +50,8 @@
     width: 60px;
     height: 60px;
     border: 1px solid #FFB740;
+}
+
+.detail-event a {
+    text-decoration: none;
 }
