--- a/src/client/invitation_1/detail-event/DetailEvent.css
+++ b/src/client/invitation_1/detail-event/DetailEvent.css
@@ -47,11 +47,37 @@
 }
 
 .detail-group{
-    width: 60px;
-    height: 60px;
+    width: 200px;
+    height: 200px;
     border: 1px solid #FFB740;
+}
+
+.detail-group h1 {
+    font-size: 100px;
+    margin-top: 10px;
+}
+
+.detail-group p {
+    font-size: 30px;
 }
 
 .detail-event a {
     text-decoration: none;
+}
+
+@media only screen 
+and (max-device-width: 428px) {
+    .detail-group {
+        width: 60px;
+        height: 60px;
+    }
+
+    .detail-group h1 {
+        font-size: 30px;
+        margin-top: 2px;
+    }
+
+    .detail-group p {
+        font-size: 12px;
+    }
 }
