--- a/src/client/invitation_1/Invitation1.css
+++ b/src/client/invitation_1/Invitation1.css
@@ -133,23 +133,23 @@ h1{
 and (max-device-width: 428px) 
 and (max-device-height: 926px) { 
     .cover-body {
-        top: 244px;
+        top: 101px;
     }
 
     .left-top{
-        top: 0;
+        top: -94px;
     }
     
     .left-bottom{
-        bottom: 155px;
+        bottom: 267px;
     }
     
     .right-top{
-        top: -17px;
+        top: -113px;
     }
     
     .right-bottom{
-        bottom: 178px;
+        bottom: 289px;
     }
 }
 
@@ -157,23 +157,31 @@ and (max-device-height: 926px) {
 and (max-device-width: 414px) 
 and (max-device-height: 896px) { 
     .cover-body {
-        top: 200px;
+        top: 115px;
     }
 
     .left-top{
-        top: -50px;
+        top: -100px;
     }
     
     .left-bottom{
-        bottom: 155px;
+        bottom: 222px;
     }
     
     .right-top{
-        top: -67px;
+        top: -117px;
     }
     
     .right-bottom{
-        bottom: 178px;
+        bottom: 240px;
+    }
+}
+
+@media only screen 
+and (max-device-width: 411px) 
+and (max-device-height: 823px) { 
+    .cover-body {
+        top: 72px;
     }
 }
 
@@ -181,11 +189,11 @@ and (max-device-height: 896px) {
 and (max-device-width: 414px) 
 and (max-device-height: 736px) { 
     .cover-body {
-        top: 138px;
+        top: 74px;
     }
 
     .left-top{
-        top: -50px;
+        top: -98px;
     }
     
     .left-bottom{
@@ -193,7 +201,7 @@ and (max-device-height: 736px) {
     }
     
     .right-top{
-        top: -67px;
+        top: -116px;
     }
     
     .right-bottom{
@@ -203,21 +211,13 @@ and (max-device-height: 736px) {
 
 @media only screen 
 and (max-device-width: 411px) 
-and (max-device-height: 823px) { 
-    .cover-body {
-        top: 180px;
-    }
-}
-
-@media only screen 
-and (max-device-width: 411px) 
 and (max-device-height: 731px) { 
     .cover-body {
-        top: 136px;
+        top: 65px;
     }
 
     .left-top{
-        top: -40px;
+        top: -116px;
     }
     
     .left-bottom{
@@ -225,7 +225,7 @@ and (max-device-height: 731px) {
     }
     
     .right-top{
-        top: -57px;
+        top: -130px;
     }
     
     .right-bottom{
@@ -237,7 +237,7 @@ and (max-device-height: 731px) {
 and (max-device-width: 390px) 
 and (max-device-height: 844px) { 
     .cover-body {
-        top: 200px;
+        top: 84px;
     }
 }
 
@@ -245,7 +245,15 @@ and (max-device-height: 844px) {
 and (max-device-width: 375px) 
 and (max-device-height: 812px) { 
     .cover-body {
-        top: 184px;
+        top: 76px;
+    }
+
+    .left-bottom{
+        bottom: 180px;
+    }
+
+    .right-bottom{
+        bottom: 200px;
     }
 }
 
@@ -253,11 +261,11 @@ and (max-device-height: 812px) {
 and (max-device-width: 375px) 
 and (max-device-height: 667px) { 
     .cover-body {
-        top: 110px;
+        top: 60px;
     }
 
     .left-top{
-        top: -80px;
+        top: -108px;
     }
     
     .left-bottom{
@@ -265,7 +273,7 @@ and (max-device-height: 667px) {
     }
     
     .right-top{
-        top: -97px;
+        top: -126px;
     }
     
     .right-bottom{
@@ -277,7 +285,7 @@ and (max-device-height: 667px) {
 and (max-device-width: 360px) 
 and (max-device-height: 502px) { 
     .cover-body {
-        top: 50px;
+        top: 18px;
     }
 
     .left-top{
@@ -304,7 +312,7 @@ and (max-device-height: 502px) {
 @media only screen 
 and (max-device-width: 320px) { 
     .cover-body {
-        top: 40px;
+        top: 17px;
     }
 
     .left-top{
